[tool.poetry]
name = "oil-sentiment-llm"
version = "0.1.0"
description = "LLM analysis example for the oil-sentiment repo using Langchain and Groq"
authors = ["gc5232978 <gc5232978@gmail.com>"]
readme = "README.md"
license = "LICENSE.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.1"
langchain-groq = "^0.1.4"
langchain-community = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
